--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
   - cd sandwich-shop-manager
   - mvn clean install
 after_success:
-  - mvn clean test
+  - mvn clean test jacoco:report coveralls:report
