--- a/sandwich-shop-manager/pom.xml
+++ b/sandwich-shop-manager/pom.xml
@@ -40,6 +40,19 @@
 					</execution>
 				</executions>
 			</plugin>
+      <plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.3.0</version>
+				<configuration>
+					<repoToken>oNKvzzx2c3skA9UP8Nf7fsgKdbwdpAKTK</repoToken>
+				</configuration>
+			</plugin>
+			<plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </plugin>
 		</plugins>
 	</build>
 </project>
